--- a/src/app/@admin/pages/admin.component.html
+++ b/src/app/@admin/pages/admin.component.html
@@ -1,14 +1,15 @@
-<h1>Admin</h1>
-<ul>
-    <li>
-      <a  [routerLink]="['/']" routerLinkActive="router-link-active">Home</a>
-    </li>
-     
-      <li>
-        <a  [routerLink]="['/admin']" routerLinkActive="router-link-active">Admin</a>
-      </li>
-      <li>
-          <a  [routerLink]="['/admin/users']" routerLinkActive="router-link-active">Users </a>
-        </li>
-</ul>
-<router-outlet></router-outlet>
+<div class="d-flex" id="wrapper">
+<!-- Sidebar-->
+<app-admin-sidebar *ngIf="toggledValue"></app-admin-sidebar>
+    
+  <!-- Page content wrapper-->
+  <div id="page-content-wrapper">
+      <!-- Top navigation   Header-->
+      <app-admin-header (toggleChange)="toggled($event)"></app-admin-header>
+      <!-- Page content-->
+      <div class="container-fluid">
+          <app-admin-title ></app-admin-title>
+          <router-outlet></router-outlet>
+      </div>
+  </div>
+</div>
