--- a/src/app/@admin/core/components/sidebar/sidebar.component.html
+++ b/src/app/@admin/core/components/sidebar/sidebar.component.html
@@ -9,13 +9,22 @@
     <a [routerLink]="['/admin']" routerLinkActive="router-link-active"
       class="list-group-item list-group-item-action list-group-item-light p-3"
       
-      ><i class="fas fa-columns"></i> Dashboard</a
+      ><i class="fas fa-columns"></i> Panel </a
     >
     <a
     [routerLink]="['/admin/users']" routerLinkActive="router-link-active"
       class="list-group-item list-group-item-action list-group-item-light p-3"
       
-      ><i class="fas fa-user-friends"></i> Users</a
+      ><i class="fas fa-user-friends"></i> Usuarios</a
     >
+    <a
+    [routerLink]="['/admin/products']" routerLinkActive="router-link-active"
+      class="list-group-item list-group-item-action list-group-item-light p-3"
+      
+      ><i class="fas fa-seedling"></i> Productos</a
+    >
+
+    
+
   </div>
 </div>
