--- a/src/app/@public/core/components/header/header.component.html
+++ b/src/app/@public/core/components/header/header.component.html
@@ -4,12 +4,12 @@
           <img class="logotype" src="/assets/img/mercadologo.png" alt="Logotipo de la tienda" />
       </div>
       <div>
-          <p>mugan86@gmail.com</p>
+          <p></p>
       </div>
       <div class="d-flex flex-row-reverse">
-          <a class="nav-link active" href="#">Active link</a>      
-          <a class="nav-link" href="#">Link</a>      
-          <a class="nav-link disabled" href="#">Disabled link</a>      
+        <a class="nav-link active" href="#">Comprar</a>      
+        <a class="nav-link" href="#"></a>      
+        <a class="nav-link disabled" href="#">Carrito</a>    
       </div>
   </div>
 </div>
