--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -18,15 +18,24 @@
           class="nav-link"
           [routerLink]="['/']"
           routerLinkActive="router-link-active"
-          >Home</a
+          >Inicio</a
         >
       </li>
+      
       <li class="nav-item">
         <a
           class="nav-link"
           [routerLink]="['/contact']"
           routerLinkActive="router-link-active"
-          >Contact</a
+          >Contacto</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/aboutp']"
+          routerLinkActive="router-link-active"
+          >Sobre Nosotros</a
         >
       </li>
     </ul>
