--- a/src/app/@public/pages/home/home.component.html
+++ b/src/app/@public/pages/home/home.component.html
@@ -1,187 +1,9 @@
+
+<shop-carousel-items [items]="items"></shop-carousel-items>
+<app-product-category-list *ngIf="productsList"
+  [title]="'Juegos de PS4'"
+  [productsList]="productsList"
+>
+ 
+
 <!-- CONTENIDO -->
-<div class="section">
-  <!-- container -->
-  <div class="container">
-    <!-- row -->
-    <div class="row">
-
-<div class="col-md-12">
-        <div class="section-title text-center">
-          <h3 class="title">Verduras</h3>
-        </div>
-      </div>
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/lechugas.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Verduras</p>
-            <h3 class="product-name"><a href="#">Lechugas</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-        <!-- product -->
-        <div class="col-md-3 col-xs-6">
-          <div class="product">
-            <div class="product-img">
-              <img src="../../../../assets/img/pepino.jpeg" alt="" >
-            </div>
-            <div class="product-body">
-              <p class="product-category">Verduras</p>
-              <h3 class="product-name"><a href="#">Pepino</a></h3>
-              <h4 class="product-price">₡ 3000</h4>
-              <div class="product-btns">
-                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-                <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- /product -->
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/tomates.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Verduras</p>
-            <h3 class="product-name"><a href="#">Tomates</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-      <div class="clearfix visible-sm visible-xs"></div>
-
-     
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/repollo.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Verduras</p>
-            <h3 class="product-name"><a href="#">Repollo</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-      <div class="col-md-12">
-        <div class="section-title text-center">
-          <h3 class="title">Frutas</h3>
-        </div>
-      </div>
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/manzanas.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Frutas</p>
-            <h3 class="product-name"><a href="#">Manzana</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/melon.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Frutas</p>
-            <h3 class="product-name"><a href="#">Melones</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-      <div class="clearfix visible-sm visible-xs"></div>
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/sandia.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Frutas</p>
-            <h3 class="product-name"><a href="#">Sandia</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-      <!-- product -->
-      <div class="col-md-3 col-xs-6">
-        <div class="product">
-          <div class="product-img">
-            <img src="../../../../assets/img/papaya.jpeg" alt="">
-          </div>
-          <div class="product-body">
-            <p class="product-category">Frutas</p>
-            <h3 class="product-name"><a href="#">Papaya</a></h3>
-            <h4 class="product-price">₡ 3000</h4>
-            <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i></button>
-              <button class="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /product -->
-
-    
-    </div>
-    <!-- /row -->
-  </div>
-  <!-- /container -->
-</div>
-<!-- /Section -->
-
-
-
-<!-- /CONTENIDO -->
