--- a/src/app/@admin/pages/users/users.component.html
+++ b/src/app/@admin/pages/users/users.component.html
@@ -1,1 +1,10 @@
-<p>users works!</p>
+
+<app-table-pagination
+    [query]="query"
+    [context]="context"
+    [itemsPage]="itemsPage"
+    [resultData]="resultData"
+    [include]="include"
+    [tableColumns]="columns"
+    (manageItem)="takeAction($event)"
+></app-table-pagination>
