--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -86,6 +86,13 @@
           <a class="dropdown-item" (click)="logout()">Salir de la sesión</a>
         </div>
       </li>
+      <li class="nav-item" *ngIf="!access">
+        <a
+          class="nav-link"
+          (click)="open()"
+          ><i class="fas fa-shopping-cart"></i> </a
+        >
+      </li>
     </ul>
   </div>
 </nav>
