--- a/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
@@ -6,7 +6,7 @@
     z-index: 1022; /* Stay on top */
     top: 0; /* Stay at the top */
     right: 0;
-    background-color: #111; /* Black*/
+    background-color: #f5f5f5; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -24,9 +24,13 @@
   
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: #111;
+    cursor:pointer;
   }
-  
+  .sidenav h5{
+    margin-top:-30px;
+    margin-left:28px;
+  }
   /* Position and style the close button (top right corner) */
   .sidenav .closebtn {
     position: absolute;
@@ -35,6 +39,7 @@
     font-size: 36px;
     margin-left: 50px;
   }
+  
   #overlay{
       z-index: 1021;
       position:fixed;
@@ -49,7 +54,10 @@
       opacity: 0.5;
       cursor: not-allowed;
   }
- 
+  .product{
+    margin:10px;
+    padding: 12px;
+  }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
