funcionalidad del carrito de compras implementada en un 95%

--- a/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
@@ -58,7 +58,7 @@
     margin:10px;
     padding: 12px;
   }
-  
+  @import '../../../../../assets/styles/prices.scss';
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
