--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -9,8 +9,8 @@ $admin-secondary-color: #0143a3 !important;
 
 Colores publico 
 ====================================================*/
-
-
+$price-primary:#cc1c39 !important;
+$price-discount:#999 !important;
 
 
 
