--- a/src/app/@public/core/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/@public/core/components/shopping-cart/shopping-cart.component.html
@@ -10,16 +10,55 @@
       <div class="row">
         <div class="col-lg-2">
           <img class="img-fluid" [src]="product.img" [alt]="product.name">
-          <button class="btn btn-sm btn-danger mt-2 " (click)="clearItem(product)"> X </button>
+          <button class="btn btn-sm btn-danger mt-2 " (click)="clearItem(product)"> <i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
         </div>
         <div class="col-lg">
-          {{product.name}}
+          <div class="row">
+            <div class="col-lg-9">
+              <h6>{{product.name}}</h6>
+              <shop-qty-selector
+              [qty]="product.qty"
+              [stock]="product.stock"
+              (updateValue)="changeValue($event, product)"
+              >
+              </shop-qty-selector>
+            </div>
+            <div class="col-lg">
+              <ng-template #noDiscount>
+                <div class="price">
+                  ₡ {{product.price}}
+                </div>
+              </ng-template>
+              <div class="price" *ngIf="product.discount; else noDiscount">
+                ₡ {{product.priceDiscount | number}}
+                <br>
+                 <span>
+                  ₡ {{product.price | number}}
+                 </span>
+                 <br>
+                 <span class="discount-percentage">
+                    ({{product.discount}} %)
+                 </span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-lg-2"></div>
-        
       </div>
   </div>
-  <a (click)="clear()">Borrar</a>
+  <div class=" row product">
+    <div class="col-lg-5">
+      Subtotal: {{cart.subtotal}}
+    </div>
+    <div class="col-lg">
+      Total a pagar:   <span class="text-primary float-right price-total" > ₡ {{cart.total}}</span>
+    </div>
+  </div>
+  <hr>
+  <div class="ml-5 mr-5">
+    <button class="btn btn-danger mr-2" (click)="clear()"> Cancelar pedido</button>
+    <button class="btn  btn-success float-right mr-2" (click)="finalizarPedido()"> Realizar pedido </button>
+  </div>
   </div>
  
   <div id="overlay"></div>
