se realizaron cambios finales a la funcionalidad del carrito de compras

--- a/src/app/@public/pages/forms/checkout/checkout.component.html
+++ b/src/app/@public/pages/forms/checkout/checkout.component.html
@@ -9,18 +9,18 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                 <label for="firstName">Nombre</label> <br>
-                <span> José </span>
+                <span> {{meData.user.name}} </span>
                 </div>
                 <div class="col-md-6 mb-3">
                 <label for="lastName">Apellido/s</label>
                 <br>
-                <span> Solano Fallas </span>
+                <span> {{meData.user.lastname}} </span>
                 </div>
             </div>
     
             <div class="mb-3">
                 <label for="username">Email</label> <br>
-                <span> alsopupa@gmail.com </span>
+                <span> {{meData.user.email}} </span>
                 
             </div>
     
