--- a/src/app/@public/core/components/navbar/navbar.component.scss
+++ b/src/app/@public/core/components/navbar/navbar.component.scss
@@ -5,3 +5,9 @@
 .dropdown-item, .fas {
     cursor: pointer;
 }
+.badge.badge-primary.notification{
+    position: relative;
+    top: -14px;
+    left: -2px;
+    border-radius: 10px;
+}
