--- a/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/@public/core/components/shopping-cart/shopping-cart.component.scss
@@ -60,7 +60,39 @@
   }
   @import '../../../../../assets/styles/prices.scss';
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-width: 810px){
+    #priceTag{
+      margin-left: 100px !important;
+    }
+    
+  }
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   } 
+  @media screen and (max-width: 412px){
+    #mySidenav {
+      width: 412px !important;
+    }
+    .priceTag{
+      float:none;
+      margin-left:120px !important;
+    }
+    .sidenav a {font-size: 15px;}
+  }
+  @media screen and (max-width: 375px){
+    #mySidenav {
+      width: 375px !important;
+    }
+    #priceTag{
+      margin-left: 90px !important;
+    }
+    .sidenav a {font-size: 13px;}
+  }
+  @media screen and (max-width: 360px){
+    
+    #priceTag{
+      margin-right: 30px;
+    }
+    .sidenav a {font-size: 13px;}
+  }
