--- a/src/assets/styles/prices.scss
+++ b/src/assets/styles/prices.scss
@@ -25,3 +25,19 @@
       font-size:20px;
       margin-top:-7px;
   }
+  @media screen and (min-width: 320px ) and (max-width:480px){
+    .price{
+      font-size: 16px;
+    }
+    .price-total{  
+      font-size:18px;
+    }
+  }
+  @media screen and (max-width: 371px){
+    .price{
+      font-size: 15px;
+    }
+    .price-total{  
+      font-size:17px;
+    }
+  }
