--- a/src/app/@public/core/components/header/header.component.html
+++ b/src/app/@public/core/components/header/header.component.html
@@ -1,15 +1,15 @@
-<div class="container-fluid navbar-dark bg-dark">
+<div class="container-fluid navbar-light">
   <div class="d-flex justify-content-between">
       <div>
-          <img class="logotype" src="/assets/img/mercadologo.png" alt="Logotipo de la tienda" />
+          <img class="logotype" src="/assets/img/mercadologo3.png" alt="Logotipo de la tienda" />
       </div>
       <div>
           <p></p>
       </div>
-      <div class="d-flex flex-row-reverse">
-        <a class="nav-link active" href="#">Comprar</a>      
+      <div class="d-flex flex-row-reverse customdiv" >
+        <img src="/assets/img/comprar.png" alt="comprar" width="100" height="40" href="/#">
         <a class="nav-link" href="#"></a>      
-        <a class="nav-link disabled" href="#">Carrito</a>    
+       
       </div>
   </div>
 </div>
