--- a/src/app/@public/core/components/header/header.component.scss
+++ b/src/app/@public/core/components/header/header.component.scss
@@ -1,6 +1,10 @@
 *{
-    color: rgba(255,255,255,.80);
+    color: rgba(2, 2, 2, 0.8);
 }
+
+.customdiv {
+    margin-top: 25px;
+  }
 
 .logotype{
     width: min(50vw, 200px);
