--- a/src/app/@public/pages/contact/contact.component.html
+++ b/src/app/@public/pages/contact/contact.component.html
@@ -1,1 +1,4 @@
-<p>contact works!</p>
+<app-product-category-list *ngIf="productsList"
+  [title]="'Juegos de PS4'"
+  [productsList]="productsList"
+>
