--- a/src/app/@public/pages/home/home.component.html
+++ b/src/app/@public/pages/home/home.component.html
@@ -1,9 +1,38 @@
 
 <shop-carousel-items [items]="items"></shop-carousel-items>
-<app-product-category-list *ngIf="productsList"
-  [title]="'Juegos de PS4'"
-  [productsList]="productsList"
->
+
+<div>
+  <img src="/assets/img/imagen1.png"  class="img-fluid" alt="comprar" >
+      
+</div>
+<div class="container customdiv">
+  <div class="row">
+    <div class="col">
+      <img src="/assets/img/cuadro1.png" alt="comprar" width="500" height="400" href="/#">
+      
+
+    </div>
+    <div class="col">
+      <img src="/assets/img/cuadro2.png" alt="comprar" width="500" height="400" href="/#">
+
+    </div>
+    <div class="w-100"></div>
+    <div class="col">
+      <img src="/assets/img/cuadro3.png" alt="comprar" width="500" height="400" href="/#">
+    </div>
+    <div class="col">
+      <img src="/assets/img/cuadro4.png" alt="comprar" width="500" height="400" href="/#">
+    </div>
+  </div>
+</div>
+<div>
+  <img src="/assets/img/portada23.png"  class="img-fluid" alt="comprar" >
+      
+</div>
+<div>
+  <img src="/assets/img/portada24.png"  class="img-fluid" alt="comprar" >
+      
+</div>
  
 
 <!-- CONTENIDO -->
