--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-sm navbar-dark custom-bg sticky-top">
+<nav class="navbar navbar-expand-sm navbar-light custom-bg sticky-top">
   <button
     class="navbar-toggler"
     type="button"
@@ -27,7 +27,7 @@
           class="nav-link"
           [routerLink]="['/contact']"
           routerLinkActive="router-link-active"
-          >Contacto</a
+          >Productos</a
         >
       </li>
       <li class="nav-item">
